Move gateway to own directory and rename
Renamed app to gateway and moved all files to new dir. Changed CI to work properly.sign test

--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -22,4 +22,5 @@ jobs:
         pip install -r requirements-test.txt
     - name: Test with pytest
       run: |
+        cd gatewayApp
         pytest
