--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -17,6 +17,7 @@ jobs:
         python-version: 3.12
     - name: Install dependencies
       run: |
+        cd gatewayApp
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-test.txt
