Implement user authentication
This commit adds user authentication to the gateway. The user module
provides a User class that can be used to authenticate users. The
gateway now requires a valid user token to access the endpoints.

Put @protected decorator on the endpoints that require authentication.

--- a/gatewayApp/pytest.ini
+++ b/gatewayApp/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
-filterwarnings = 
+; addopts = -p no:warnings
+filterwarnings =
     ignore::DeprecationWarning:websockets.connection
     ignore:pkg_resources is deprecated:DeprecationWarning
     ignore:Deprecated call to `pkg_resources.declare_namespace`
+    ignore:datetime\.datetime\.utcnow\(\) is deprecated and scheduled for removal in a future version:DeprecationWarning
