Gateway - Node communication (#12)
* Gateway - Node socket connection encrypted using DH exchange and working on Messages

* Tidied code and added docs to Gateway - Node connection

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /gatewayApp/gateway/__pycache__
 gatewayApp/utils/__pycache__
 gatewayApp/utils/key.priv
+/Message/__pycache__
+nodeApp/node/__pycache__
+app/__pycache__/
+Message/__pycache__/
+tests/__pycache__/
+
