--- a/nodeApp/brownie-config.yaml
+++ b/nodeApp/brownie-config.yaml
@@ -8,6 +8,9 @@ networks:
     chainid: 11155111
     explorer: 'https://sepolia.etherscan.io'
 
+wallets:
+  from_key: ${PRIVATE_KEY}
+
 dependencies: []
 
 compiler:
