Add daemonize and dockerize
Dockerized test environment and implemented daemonize
to be able to run the gateway in the background.

--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -11,17 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v3
-      with:
-        python-version: 3.12
-    - name: Install dependencies
+    - name: Set up Docker
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo systemctl enable docker
+        sudo systemctl start docker
+    - name: Run pytest
       run: |
         cd gatewayApp
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-test.txt
-    - name: Test with pytest
-      run: |
-        cd gatewayApp
-        pytest
+        ./run_pytest.sh
