--- a/.github/workflows/deploy-ci.yml
+++ b/.github/workflows/deploy-ci.yml
@@ -24,3 +24,4 @@ jobs:
         cd gatewayApp
         docker build -t docker-gateway .
         docker run docker-gateway
+      timeout-minutes: 0.5
