--- a/.github/workflows/deploy-ci.yml
+++ b/.github/workflows/deploy-ci.yml
@@ -19,8 +19,9 @@ jobs:
         echo "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list
         sudo apt-get update
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-    - name: Run gateway in docker
+    - name: Run gateway in docker and try to curl it
       run: |
         cd gatewayApp
         docker build -t docker-gateway .
         docker run -d --rm docker-gateway
+        curl http://0.0.0.0:1234
