--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Run Gateway Application
+name: Ci pipeline
 
 on:
   push:
@@ -7,7 +7,24 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  pytest:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Docker
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo tee /etc/apt/trusted.gpg.d/docker.asc
+        echo "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list
+        sudo apt-get update
+        sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+    - name: Run pytest
+      run: |
+        cd gatewayApp
+        ./run-pytest.sh
+
+  run-gateway:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
