--- a/docker/Dockerfile.gateway
+++ b/docker/Dockerfile.gateway
@@ -1,3 +1,8 @@
+FROM python:3.12-slim AS temp-stage
+
+COPY gatewayApp /temp/gatewayApp
+COPY Message /temp/Message
+
 FROM python:3.12-slim AS base
 
 WORKDIR /app
@@ -9,10 +14,13 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-COPY . /app
+COPY --from=temp-stage /temp/gatewayApp /app/gatewayApp
+COPY --from=temp-stage /temp/Message /app/Message
 
 RUN pip install --upgrade pip \
-    && pip install -r requirements.txt
+    && pip install -r /app/gatewayApp/requirements.txt
+
+WORKDIR /app/gatewayApp
 
 EXPOSE 1234
 
