test migration to ape (not fully succesful)
added build to gitignore
changes in config to using anvil (local testnet)
changes in tests (they are running but 9 faild)
there was no changes in blockchain so i just can't modify this tests because brownie was specific and many things need remodeling.

--- a/nodeApp/ape-config.yaml
+++ b/nodeApp/ape-config.yaml
@@ -5,3 +5,7 @@ providers:
     sepolia:
       infura:
         api_key: ${WEB3_INFURA_API_KEY}
+    local:
+      node:
+        host: http://127.0.0.1
+        port: 8545
